# gobang_qt

./: CMakeLists.txt  GobangAI.cpp  GobangAI.h  GobangBoard.cpp  GobangBoard.h  GobangRuleChecker.cpp  GobangRuleChecker.h  LICENSE  README.md  main.cpp
resources/: gobang.qrc
resources/images/interface/: 需要的按钮清单.txt
